--- a/package.json
+++ b/package.json
@@ -1,21 +1,6 @@
 {
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/http": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@angular/router": "^3.0.0-alpha.3",
-    "@angular/router-deprecated": "^2.0.0-rc.1",
-    "@angular/upgrade": "^2.0.0-rc.1",
-    "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "^0.19.30",
-    "zone.js": "^0.6.12"
-  },
-  "devDependencies": {
+    "jspm": "^0.16.39",
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.2.4",
     "gulp-pug": "^3.0.3",
@@ -26,6 +11,28 @@
     "run-sequence": "^1.2.1",
     "ts-node": "^0.9.0",
     "tslint": "^3.11.0",
-    "typescript": "^1.8.10"
+    "typescript": "^1.9.0-dev.20160612-1.0"
+  },
+  "jspm": {
+    "directories": {
+      "baseURL": "dist"
+    },
+    "dependencies": {
+      "@angular/common": "npm:@angular/common@^2.0.0-rc.1",
+      "@angular/compiler": "npm:@angular/compiler@^2.0.0-rc.1",
+      "@angular/core": "npm:@angular/core@^2.0.0-rc.1",
+      "@angular/http": "npm:@angular/http@^2.0.0-rc.1",
+      "@angular/platform-browser": "npm:@angular/platform-browser@^2.0.0-rc.1",
+      "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0-rc.1",
+      "@angular/router": "npm:@angular/router@^3.0.0-alpha.3",
+      "@angular/upgrade": "npm:@angular/upgrade@^2.0.0-rc.1",
+      "core-js": "npm:core-js@^2.4.0",
+      "reflect-metadata": "npm:reflect-metadata@^0.1.3",
+      "rxjs": "npm:rxjs@5.0.0-beta.6",
+      "zone.js": "npm:zone.js@^0.6.12"
+    },
+    "devDependencies": {
+      "typescript": "npm:typescript@^1.8.10"
+    }
   }
 }
