--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,36 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false
-  }
+    "compilerOptions": {
+        "target": "ES5",
+        "inlineSources": true,
+        "module": "commonjs",
+        "removeComments": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "noEmitHelpers": false,
+        "sourceMap": true,
+        "noResolve": false,
+        "baseUrl": "./dist/jspm_packages",
+        "paths": {
+            "@angular/*": [
+                "npm/@angular/*@2.0.0-rc.1"
+            ],
+            "@angular/router": [
+                "npm/@angular/router@3.0.0-alpha.3"
+            ],
+            "rxjs/*": [
+                "npm/rxjs@5.0.0-beta.6/*"
+            ]
+        }
+    },
+    "filesGlob": [
+        "typings/index.d.ts",
+        "lib/**/*.ts"
+    ],
+    "files": [
+        "typings/index.d.ts",
+        "lib/app.component.ts",
+        "lib/index.ts",
+        "lib/starter.ts",
+        "lib/systemjs.config.ts"
+    ]
 }
