--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
       "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@^2.0.0-rc.1",
       "@angular/router": "npm:@angular/router@^3.0.0-alpha.3",
       "@angular/upgrade": "npm:@angular/upgrade@^2.0.0-rc.1",
-      "core-js": "npm:core-js@^2.4.0",
+      "core.js": "npm:core-js@^2.4.0",
+      "crypto": "npm:empty-module@^0.0.2",
       "reflect-metadata": "npm:reflect-metadata@^0.1.3",
       "rxjs": "npm:rxjs@5.0.0-beta.6",
       "zone.js": "npm:zone.js@^0.6.12"
