--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "tslint": "^3.11.0",
     "typescript": "^1.9.0-dev.20160612-1.0"
   },
+  "devDependencies": {
+    "http-server": "^0.9.0"
+  },
   "jspm": {
     "directories": {
       "baseURL": "dist"
